--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-learning-tut",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Swathsala.github.io/monsters-rolodex",
+  "homepage": "https://Swathsala.github.io/monsters",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
